commit CRUD + failMsg() + postAccepted
- Fonctionnalités crud ajoutées via fonctions manipulant le DOM,

- acceptation du post, création et gestio erreur si champ textarea vide

- onclick="nomFonction(this)" => Important pour les fonctions CRUD update et delete

--- a/CRUD-BASICS/style.css
+++ b/CRUD-BASICS/style.css
@@ -9,6 +9,7 @@ body {
   }
   body h1 {
     text-align: center;
+    font-size: medium;
   }
 }
 
@@ -40,8 +41,12 @@ body {
   }
 }
 
-#msg {
+#msgFail {
   color: red;
+}
+
+#msgSuccess {
+  color: green;
 }
 
 #posts div {
