--- a/CRUD-BASICS/style.sass
+++ b/CRUD-BASICS/style.sass
@@ -5,6 +5,7 @@ body
         margin: 0 0px
         h1
             text-align: center
+            font-size: medium
 
 .container
     display: flex
@@ -20,8 +21,10 @@ body
 
 
 // message user si formulaire non valide
-#msg
+#msgFail
     color: red
+#msgSuccess
+    color: green
 
 
 // posts et toutes les div enfants
